<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.ore.contactapp.MainBabyBlissLoginUIActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/dark_for_theme"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/openAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_contact_logo_main"
        app:layout_constraintBottom_toTopOf="@+id/openAppButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <TextView
        android:id="@+id/openAppButton"
        style="@style/ExecuteButton"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/open_app"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openAppLogo" />

    <TextView
        android:id="@+id/viewAllContactsButton"
        style="@style/ExecuteButton"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/view_all_contacts"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/openAppButton"
        app:layout_constraintTop_toBottomOf="@+id/openAppButton" />

    <TextView
        android:id="@+id/killAppButton"
        style="@style/ExecuteButton"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/exit_app"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewAllContactsButton"
        app:layout_constraintTop_toBottomOf="@+id/viewAllContactsButton" />

    <TextView
        android:id="@+id/logoutButton"
        style="@style/ExecuteButton"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/killAppButton"
        app:layout_constraintStart_toStartOf="@+id/killAppButton"
        app:layout_constraintTop_toBottomOf="@+id/killAppButton" />

</androidx.constraintlayout.widget.ConstraintLayout>