<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ore.contactapp.LoginActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/dark_for_theme"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/openAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_contact_logo_main"
        app:layout_constraintBottom_toTopOf="@+id/openAppButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />


    <EditText
        android:id="@+id/email"
        style="@style/form_inputs"
        android:layout_marginTop="16dp"
        android:hint="@string/app_email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openAppLogo" />

    <EditText
        android:id="@+id/password"
        style="@style/form_inputs"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword|textWebPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/loginButton"
        style="@style/ExecuteButton"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>
